--- a/index.html
+++ b/index.html
@@ -7,46 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Planificación del trabajo a través del boceto</title>
   </head>
-  <body>
-    <!--PLANTEAMIENTO-->
+   <body>
     <header class="container">
         <div class="row">
             <div class="col-12">
-                <img class="d-none d-sm-block" src="img/referencia.png">
-                <img class="d-sm-none" src="img/referencia-xs.png">
+                <img class="d-none d-sm-block" src="img/Francisco PC.png">
+                <img class="d-sm-none" src="img/Francisco Celular.png">
+                <img class="d-none d-sm-block" src="pag web glaciar SA-100.jpg">
+                <img class="d-sm-none" src="img/Sergio Movil.png">
+                <img class="d-none d-sm-block" src="img/Deterioro PC.png">
+                <img class="d-sm-none" src="img/Deterioro-CEL.png">
             </div>
         </div>
     </header>
-    <!--NUDO-->
-    <main class="container">
-        <div class="row">
-            <div class="col-12">
-                <img class="d-none d-sm-block" src="img/referencia.png">
-                <img class="d-sm-none" src="img/referencia-xs.png">
-            </div>
-            <div class="col-12">
-                <img class="d-none d-sm-block" src="img/referencia.png">
-                <img class="d-sm-none" src="img/referencia-xs.png">
-            </div>
-            <div class="col-12">
-                <img class="d-none d-sm-block" src="img/referencia.png">
-                <img class="d-sm-none" src="img/referencia-xs.png">
-            </div>
-            <div class="col-12">
-                <img class="d-none d-sm-block" src="img/referencia.png">
-                <img class="d-sm-none" src="img/referencia-xs.png">
-            </div>
-        </div>        
-    </main>
-    <!--DESENLACE-->    
-    <footer class="container">
-        <div class="row">
-            <div class="col-12">
-                <img class="d-none d-sm-block" src="img/referencia.png">
-                <img class="d-sm-none" src="img/referencia-xs.png">
-            </div>
-        </div>
-    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
