--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="col-12">
                 <img class="d-none d-sm-block" src="img/Francisco PC.png">
                 <img class="d-sm-none" src="img/Francisco Celular.png">
-                <img class="d-none d-sm-block" src="pag web glaciar SA-100.jpg">
+                <img class="d-none d-sm-block" src="img/pag web glaciar SA-100.jpg">
                 <img class="d-sm-none" src="img/Sergio Movil.png">
                 <img class="d-none d-sm-block" src="img/Deterioro PC.png">
                 <img class="d-sm-none" src="img/Deterioro-CEL.png">
